<resources>
    <string name="a">Navigate home</string>
    <string name="b">%1$s, %2$s</string>
    <string name="c">%1$s, %2$s, %3$s</string>
    <string name="d">Navigate up</string>
    <string name="e">More options</string>
    <string name="f">Done</string>
    <string name="g">See all</string>
    <string name="h">Choose an app</string>
    <string name="i">OFF</string>
    <string name="j">ON</string>
    <string name="k">Search…</string>
    <string name="l">Clear query</string>
    <string name="m">Search query</string>
    <string name="n">Search</string>
    <string name="o">Submit query</string>
    <string name="p">Voice search</string>
    <string name="q">Share with</string>
    <string name="r">Share with %s</string>
    <string name="s">Collapse</string>
    <string name="t">Enable</string>
    <string name="u">"%1$s won't work unless you enable Google Play services."</string>
    <string name="v">Enable Google Play services</string>
    <string name="w">Install</string>
    <string name="x">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="y">Get Google Play services</string>
    <string name="z">Google Play services error</string>
    <string name="a0">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="a1">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="a2">Update</string>
    <string name="a3">"%1$s won't run unless you update Google Play services."</string>
    <string name="a4">Update Google Play services</string>
    <string name="a5">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="a6">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="a7">Open on phone</string>
    <string name="a8">Sign in</string>
    <string name="a9">Sign in with Google</string>
    <string name="a_">Search</string>
    <string name="aa">999+</string>
    <string name="ab">Language</string>
    <string name="ac">Privacy Policy</string>
    <string name="ad">Remove Root Permission</string>
    <string name="ae">Version : %s</string>
    <string name="af">SURE</string>
    <string name="ag">Settings</string>
    <string name="ah">AGREE</string>
    <string name="ai">ALLOW</string>
    <string name="aj">Allow Root Permission</string>
    <string name="ak">Grant root permission for %s as default</string>
    <string name="al">BOOST</string>
    <string name="am">Memory Used</string>
    <string name="an" formatted="false">%1s Used / %2s Total</string>
    <string name="ao">CLEAN</string>
    <string name="ap">Storaged Used</string>
    <string name="aq" formatted="false">%1s Used / %2s Total</string>
    <string name="ar">SuperUser</string>
    <string name="as">Uninstalled</string>
    <string name="at">"Your phone has been root
you can manage the rights"</string>
    <string name="au">Your phone is not yet rooted</string>
    <string name="av">Authority Management</string>
    <string name="aw">loading...</string>
    <string name="ax">Kingo SuperUser</string>
    <string name="ay">Superuser</string>
    <string name="az">ASK</string>
    <string name="b0">Ask Root Permission</string>
    <string name="b1">Always ask when %s requests for root permission</string>
    <string name="b2">RAM released</string>
    <string name="b3">Free more to speed up your phone</string>
    <string name="b4">%1s Memory Used</string>
    <string name="b5">Cleaned</string>
    <string name="b6">Add</string>
    <string name="b7">Cool Down</string>
    <string name="b8">Ignore List</string>
    <string name="b9">Remove</string>
    <string name="b_">UNINSTALL</string>
    <string name="ba">Checking for update...</string>
    <string name="bb">No update found. You are using the latest version.</string>
    <string name="bc">CLEAN ALL</string>
    <string name="bd">All junk notifications have been cleaned!</string>
    <string name="be">Clean up...</string>
    <string name="bf">OFF</string>
    <string name="bg">Dropped</string>
    <string name="bh">"It's time to cool down!"</string>
    <string name="bi">CPU temperature has reached %s</string>
    <string name="bj">CPU is overheated</string>
    <string name="bk">CPU temperature is high</string>
    <string name="bl">CPU temperature is fine</string>
    <string name="bm">ADB shell</string>
    <string name="bn">system_user_%s</string>
    <string name="bo">DENY</string>
    <string name="bp">Deny Root Permission</string>
    <string name="bq">Deny root permission for %s as default</string>
    <string name="br">About</string>
    <string name="bs">App Manager</string>
    <string name="bt">Boost ignore list</string>
    <string name="bu">Notification Cleaner</string>
    <string name="bv">Settings</string>
    <string name="bw">Update</string>
    <string name="bx">System</string>
    <string name="by">User</string>
    <string name="bz">Welcome To Facebook</string>
    <string name="c0">Please grant read external storage permission.</string>
    <string name="c1">Select app(s) to add</string>
    <string name="c2">Ignored app(s) will not be affected while boosting</string>
    <string name="c3">"The Kingo SuperUser Binary(SU) must be updated or reinstalled.

Please find Kingo Root at www.kingoapp.com and install su binary by rooting your device again."</string>
    <string name="c4">Interactive</string>
    <string name="c5">Junk Found</string>
    <string name="c6">Ad Junk</string>
    <string name="c7">Obsolete Apk</string>
    <string name="c8">Cache Junk</string>
    <string name="c9">System Cache</string>
    <string name="c_">Kingo SuperUser denied to %1s</string>
    <string name="ca">Kingo SuperUser granted to %s</string>
    <string name="cb">Français</string>
    <string name="cc">Español</string>
    <string name="cd">English</string>
    <string name="ce">Deutsch</string>
    <string name="cf">Bahasa Indonesia</string>
    <string name="cg">Italiano</string>
    <string name="ch">Português</string>
    <string name="ci">Pусский</string>
    <string name="cj">Türkçe</string>
    <string name="ck">Tiếng Việt</string>
    <string name="cl">Boost</string>
    <string name="cm">Clean</string>
    <string name="cn">ROOT</string>
    <string name="co">Manufacturer</string>
    <string name="cp">RAM used</string>
    <string name="cq">Name : %1s</string>
    <string name="cr">no permission</string>
    <string name="cs">Boost</string>
    <string name="ct">Calculator</string>
    <string name="cu">Cleaning completed</string>
    <string name="cv">CPU</string>
    <string name="cw">Swipe left and right to delete</string>
    <string name="cx">Notification Cleaner</string>
    <string name="cy">Home</string>
    <string name="cz">Clean</string>
    <string name="d0">"You've got new notifications"</string>
    <string name="d1">To clean junk notifications,please enable SuperUser.</string>
    <string name="d2">Please Choose SuperUser</string>
    <string name="d3">Too many junk notifications lagging your device!</string>
    <string name="d4">Mute</string>
    <string name="d5">Unmute</string>
    <string name="d6">Updated successfully!</string>
    <string name="d7">Enable apps to be organized</string>
    <string name="d8">Theme</string>
    <string name="d9">New version is available. Click to Update.</string>
    <string name="d_">WiFi</string>
    <string name="da">ON</string>
    <string name="db">CLEAN NOW</string>
    <string name="dc">Notification Toolbar toggle</string>
    <string name="dd">Swipe</string>
    <string name="de">Prompt timespan</string>
    <string name="df">Remove Root</string>
    <string name="dg">CANCEL</string>
    <string name="dh">Are you sure you want to remove root?</string>
    <string name="di">CONTINUE</string>
    <string name="dj">Request for root permission</string>
    <string name="dk">Security Level : Unknown</string>
    <string name="dl">Security Level</string>
    <string name="dm">%d app(s) selected</string>
    <string name="dn">Selected : %1s</string>
    <string name="do">Junk Notifications: %s</string>
    <string name="dp">%s day(s)</string>
    <string name="dq">SU Update</string>
    <string name="dr">The Superuser binary(su) must be updated.</string>
    <string name="ds">SU Updating</string>
    <string name="dt">Open</string>
    <string name="du">Your phone does not have a calculator program!</string>
    <string name="dv">℃</string>
    <string name="dw">℉</string>
    <string name="dx">Started time:%d days ago</string>
    <string name="dy">Started time:%d hours ago</string>
    <string name="dz">Started time:%d minutes ago</string>
    <string name="e0">About</string>
    <string name="e1">Language</string>
    <string name="e2">Setting</string>
    <string name="e3">Cool Down</string>
    <string name="e4">Delect</string>
    <string name="e5">Ignore List</string>
    <string name="e6">Add Ignore List</string>
    <string name="e7">Memory Boost</string>
    <string name="e8">Junk Clean</string>
    <string name="e9">Storage Boost</string>
    <string name="e_">Recommendation</string>
    <string name="ea">Running Apps</string>
    <string name="eb">Please choose at least one</string>
    <string name="ec">Toast notification</string>
    <string name="ed">Are you sure you want to uninstall this app?</string>
    <string name="ee">Uninstall System APP</string>
    <string name="ef">Removing system apps may cause system instability and other problems.</string>
    <string name="eg">Uninstalling %1s ...</string>
    <string name="eh">: Unknown</string>
    <string name="ei">UPDATE</string>
    <string name="ej">"What's New"</string>
    <string name="ek">Updating SU...</string>
    <string name="el">Version</string>
    <string name="em">WARNING</string>
    <string name="en">Switch Charging Lock</string>
    <string name="eo">Weather Push</string>
    <string name="ep">Weather push requires your location permission!</string>
    <string name="eq">sans-serif</string>
    <string name="er">sans-serif-medium</string>
    <string name="es">sans-serif-medium</string>
    <string name="et">sans-serif</string>
    <string name="eu">sans-serif</string>
    <string name="ev">sans-serif</string>
    <string name="ew">sans-serif</string>
    <string name="ex">sans-serif-light</string>
    <string name="ey">sans-serif</string>
    <string name="ez">sans-serif</string>
    <string name="f0">sans-serif</string>
    <string name="f1">sans-serif-medium</string>
    <string name="f2">ROOT NOW</string>
    <string name="f3">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="f4">Auto Optimizing</string>
    <string name="f5">android.support.design.widget.BottomSheetBehavior</string>
    <string name="f6">%1$d / %2$d</string>
    <string name="com.crashlytics.android.build_id">912a811e-bff5-40f6-9a39-e6faf6f3389f</string>
    <string name="f7">Toggle password visibility</string>
    <string name="f8">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="f9">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="fb">CPU Temperature Unit</string>
    <string name="fc">Celsius</string>
    <string name="fd">Fahrenheit</string>
    <string name="fe">General</string>
    <string name="ff">Root</string>
    <string name="fi">To ensure stability,superuser service components will be installed and receiver real-time updates.Please reset assured that no personal date will be collected</string>
    <string name="fj">Necessary function</string>
</resources>